[tool.poetry]
name = "medssup"
version = "0.1.0"
description = "Project for research of self seupervised learing for medical images"
authors = ["Egor Shestopalov <shestopalovegor@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
