[tool.poetry]
name = "medssup"
version = "0.1.0"
description = "Project for research of self seupervised learing for medical images"
authors = ["Egor Shestopalov <shestopalovegor@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
pre-commit = "^2.13.0"
torch = "^1.8.1"
SimpleITK = "^2.0.2"
albumentations = "^1.0.0"
opencv-python = "^4.5.2"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
torchvision = "^0.9.1"
vit-pytorch = "^0.19.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
